--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         }
         iframe{
             background-color: rgb(241, 230, 217);
+             background-image: url(download.jpeg);
         }
     </style>
 </head>
